app/css/styles-new.css
*, *::before, *::after {
  box-sizing: inherit;
}

@at-root {
  @-moz-viewport      { width: device-width; }
  @-ms-viewport       { width: device-width; }
  @-o-viewport        { width: device-width; }
  @-webkit-viewport   { width: device-width; }
  @viewport           { width: device-width; }
}

[tabindex="-1"]:focus {
  outline: none !important;
}

html, body {
  margin: 0;
  padding: 0;
  font-size: 16px;
  box-sizing: border-box;
}

html {
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

body {
  font-family: 'OpenSans', sans-serif;
  line-height: 1.4;
  color: #fff;
  background-color: #333;
}

.header {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: 3rem;
  width: 100%;
  background-color: #4c4c4c;
  z-index: 2;
  user-select: none;
}

h1 {
  flex: 1;
  display: flex;
  margin: 0;
  padding: 0 0 0 1rem;
  font-size: 1.2rem;
  font-weight: 200;
  color: #fff;
}

h1 span {
  display: none;
}

.reported-cases {
  display: flex;
  align-items: center;
  background-color: #333;
  padding: .5rem 1rem;
  height: 100%;
}

.reported-cases-num {
  padding: 0 .5rem 0 0;
  font-size: 1.5rem;
  font-weight: bold;
}

.reported-cases-label {
  font-size: .6rem;
  font-weight: 200;
  line-height: 1.2;
  text-transform: uppercase;
}

.last-updated {
  display: block;
  font-size: .7rem;
  text-transform: none;
}

.footer {
  position: absolute;
  left: 1rem;
  right: 1rem;
  bottom: 3rem;
  padding: 1rem;
  /* background-color: rgba(70,70,70,.8); */
  z-index: 5;
}

.legend {
  position: fixed;
  top: 4rem;
  right: .5rem;
  width: 4.5em;
  height: 9rem;
}

.legend-header {
  width: 100%;
  font-size: .7rem;
  font-weight: 600;
  text-transform: uppercase;
  text-align: right;
}

.legend ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.legend ul li {
  position: absolute;
  right: 0;
  bottom: 2rem;
  display: flex;
  flex-direction: row-reverse;
}

.legend ul .circle {
  display: block;
  opacity: .6;
}

.legend ul .label {
  position: absolute;
  top: 0;
  display: flex;
}

.legend ul .label:after {
  content: '';
  display: block;
  width: 20px;
  height: 0;
  border-top: 1px dotted #fff;
}

.legend ul .label-val {
  margin-top: -.7em;
  margin-right: .3rem;
  font-size: .7rem;
  line-height: 1;
  color: #fff;
}

.new-cases {
  position: absolute;
  right: 0;
  bottom: 0;
  width: 3.5rem;
  display: flex;
  flex-direction: row-reverse;
  font-size: .7rem;
}

.new-cases .circle {
  display: block;
  width: 12px !important;
  height: 12px !important;
  border-radius: 50%;
  opacity: .6;
}

.new-cases .label {
  position: absolute;
  top: 0;
  display: flex;
  align-items: center;
  text-transform: uppercase;
  line-height: 1;
}

.new-cases .label:after {
  content: '';
  display: block;
  width: 8px;
  height: 0;
  margin-right: .8rem;
  border-top: 1px dotted #fff;
}

.new-cases .label-val {
  margin-right: .3rem;
  font-size: .65rem;
  line-height: 1;
  color: #fff;
}



.mapboxgl-popup {
  max-width: 400px;
  color: #222;
}


/* range slider */

#spread {
  display: flex;
  align-items: center;
  padding: .2rem;
  color: #fff;
  font-size: .7rem;
  text-transform: uppercase;
  /* background-color: #94ad58; */
  background-color: #66cc66;
  border-radius: .3rem;
  transition: all .3s ease;
  cursor: pointer;
  }

#spread .spread-label {
  display: none;
}

#spread:hover {
  /* background-color: #738b36; */
  background-color: #44aa44;
}

.range-slider {
  position: fixed;
  left: .5rem;
  right: .5rem;
  bottom: 3rem;
  padding: .25rem .5rem;
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-size: .8rem;
  color: #fff;
  line-height: 1;
  border-radius: .2rem;
  background-color: rgba(70,70,70,.8);
  z-index: 3;
}

.range-slider label {
  display: flex;
  /* width: 5rem; */
  align-items: center;
}

input[type=range] {
  flex: 1;
  margin: 0 .5rem;
  -webkit-appearance: none;
  cursor: ew-resize;
}

input[type=range]:focus {
  outline: none;
}

/* webkit */
input[type=range]::-webkit-slider-runnable-track {
  width: 100%;
  height: .1rem;
  cursor: ew-resize;
  animate: 0.2s;
  background: #fff;
  border-radius: 50%;
}
input[type=range]::-webkit-slider-thumb {
  margin-top: -.5rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #ffffff;
  border: 0;
  box-shadow: 2px 2px 3px 0px rgba(0,0,0,.4);
  cursor: ew-resize;
  -webkit-appearance: none;
}
input[type=range]:focus::-webkit-slider-runnable-track {
  background: #fff;
}

/* moz */
input[type=range]::-moz-range-track {
  width: 100%;
  height: .1rem;
  cursor: ew-resize;
  animate: 0.2s;
  background: #fff;
  border-radius: 50%;
}
input[type=range]::-moz-range-thumb {
  margin-top: -.55;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #ffffff;
  border: 0;
  box-shadow: 2px 2px 3px 0px rgba(0,0,0,.4);
  cursor: ew-resize;
}

/* ie */
input[type=range]::-ms-track {
  width: 100%;
  height: .1rem;
  cursor: ew-resize;
  animate: 0.2s;
  background: #fff;
  border-radius: 50%;
}
input[type=range]::-ms-fill-lower {
  background: #fff;
  border-radius: 50%;
}
input[type=range]::-ms-fill-upper {
  background: #fff;
  border-radius: 50%;
}
input[type=range]::-ms-thumb {
  margin-top: -.55;
  width: 1rem;
  height: 1rem;
  background: #ffffff;
  border-radius: 50%;
  border: 0;
  box-shadow: 2px 2px 3px 0px rgba(0,0,0,.4);
  cursor: ew-resize;
}

.map-container {
  position: absolute;
  top: 0;
  bottom: 0;
  padding-top: 3rem;
  width: 100%;
}

#map {
  position: relative;
  width: 100%;
  height: 100%;
  z-index: 1;
}

/* modal */

.modal-wrapper {
  display: none;
  position: relative;
  opacity: 0;
  -webkit-transition: opacity 400ms ease;
  -moz-transition: opacity 400ms ease;
  -o-transition: opacity 400ms ease;
  -ms-transition: opacity 400ms ease;
  transition: opacity 400ms ease;
  z-index: 15;
}

.modal-wrapper.is-block {
  display: block;
}

.modal-wrapper.is-visible {
  opacity: 1;
}

.modal {
  display: none;
  flex-direction: column;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  bottom: 0;
  background-color: #fff;
  overflow: hidden;
  z-index: 17;
  user-select: none;
}

.modal.is-flex {
  display: flex;
}

.modal.is-visible {
  opacity: 1;
  margin-top: 0;
}

.modal-backdrop {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  bottom: 0;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 16;
}

.modal-header {
  display: flex;
  align-items: center;
  height: 4.5rem;
  justify-content: space-between;
  border-bottom: 1px solid #dedede;
}

.modal-title {
  flex: 1;
  padding: 0 0 0 3rem;
  font-size: 1.8rem;
  font-weight: 200;
}

.modal-title strong {
  font-weight: 600;
  user-select: none;
}

.modal-cancel {
  position: relative;
  width: 4.5rem;
  height: 4.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

.modal-body {
  position: relative;
  flex: 1;
  width: 100%;
  min-height: 10rem;
  padding: 1.5rem 3rem;
  font-size: .9rem;
  line-height: 1.6;
  color: #454545;
  overflow: auto;
}

.modal-body h2 {
  margin: 0;
  font-size: 1.6rem;
  font-weight: normal;
  color: #7cbbc4;
}

.modal-body ul {
  margin: 0;
  padding: 0;
}

.modal-body li {
  margin: 0 0 .8rem;
  padding: 0;
}

.modal-body p {
  margin: 1.5rem 0;
}


@media only screen and (min-width: 500px) {

  h1 span {
    display: inline;
  }

  #spread {
    padding: .2rem .75rem .2rem .5rem;
  }

  #spread img {
    margin-right: .25rem;
  }

  #spread .spread-label {
    display: inline;
  }

}

@media only screen and (min-width: 641px) {

  .range-slider {
    bottom: 2.25rem;
  }

}

@media only screen and (min-width: 700px) {

  .legend {
    right: 1rem;
  }

  .range-slider {
    right: auto;
    width: 50%;
    bottom: 3.5rem;
  }

  .modal {
    top: 50%;
    left: 50%;
    bottom: auto;
    width: 40rem;
    margin-top: -3rem;
    max-height: calc(100vh - 6rem);
    transform: translate(-50%, -50%);
    border-radius: .3rem;
    opacity: 0;
    -moz-box-shadow: 1px 1px 6px 0px rgba(0, 0, 0, 0.1);
    -webkit-box-shadow: 1px 1px 6px 0px rgba(0, 0, 0, 0.1);
    box-shadow: 1px 1px 6px 0px rgba(0, 0, 0, 0.1);
    -webkit-transition: all 400ms ease;
    -moz-transition: all 400ms ease;
    -o-transition: all 400ms ease;
    -ms-transition: all 400ms ease;
    transition: all 400ms ease;
  }

  .modal-body {
    padding: 1.5rem 6rem;
  }

}

@media only screen and (max-width: 814px) {

  .legend ul li {
    width: 3.5rem;
  }

  .legend ul .circle {
    width: 10px !important;
  }

}


@media only screen and (min-width: 815px) {

  .header {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    height: 4rem;
  }

  h1 {
    font-size: 1.5rem;
    margin-bottom: 0;
  }

  .map-container {
    padding-top: 4rem;
  }

  .new-cases {
    height: 1rem;
    left: 1rem;
    right: 1rem;
    bottom: 1.5rem;
    width: auto;
  }

  .legend {
    padding: 1rem 0;
    top: auto;
    bottom: 3.5rem;
    right: 2rem;
    width: 11rem;
    height: 11.5rem;
    border-radius: .2rem;
    background-color: rgba(70,70,70,.8);
    z-index: 4;
  }

  .legend-header {
    text-align: center;
    font-size: .8rem;
  }

  .legend ul li {
    left: 1rem;
    right: 1rem;
    bottom: 3.5rem;
  }

  .legend ul .circle, .new-cases .circle {
    position: absolute;
    right: 3rem;
    bottom: 0;
    transform: translateX(50%);
    border-radius: 50%;
  }

  .legend ul .label, .new-cases .label {
    position: absolute;
    top: 0;
    left: 0;
    width: 100px;
    display: flex;
    align-items: flex-start;
    justify-content: flex-start;
  }

  .new-cases .label {
    top: 8px;
  }

  .legend ul .label:after, .new-cases .label:after {
    content: '';
    display: block;
    flex: 1;
    height: 0;
    border-top: 1px dotted #fff;
  }

  .legend ul .label-val, .new-cases .label-val {
    margin-right: .5rem;
    text-align: right;
    width: 2rem;
  }

  .new-cases .circle {
    width: 16px !important;
    height: 16px !important;
  }

  .new-cases .label-val {
    margin-top: -.5em;
  }

  .range-slider {
    left: 2rem;
    bottom: 3.5rem;
    padding: .5rem 1rem;
  }

}


@media only screen and (min-width: 1000px) {

  .header h1 {
    font-size: 1.8rem;
  }

  .reported-cases {
    padding: 0 2.2rem;
  }

  .reported-cases-num {
    font-size: 2.3rem;
    padding-right: 1rem;
  }

  .reported-cases-label {
    font-size: .9rem;
    font-weight: bold;
  }

  .last-updated-date {
    display: inline;
    font-size: .9rem;
    font-weight: normal;
  }

}

